# Product_develop_management

./: .env.example  .gitignore  Makefile  dashboard-demo.html  docker-compose.yml  index.html  pdm-cron-wrapper.sh  pdm-demo.sh  start-pdm-demo.sh
assets/: admin-CkKs0CtQ.js  admin-DHH5QR2C.js  index-BCX70mbO.js  index-BWZa0P0G.js  index-CjkIPolf.css  (+13 more)
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_performance_indexes.py
backend/app/: main.py
backend/app/api/v1/: admin.py  analytics.py  auth.py  callbacks.py  certifications.py  dashboard.py  design.py  firmware.py  products.py  projects.py  suppliers.py
backend/app/core/: config.py  database.py  deps.py  event_bus.py  event_handlers.py  exceptions.py  minio_client.py  redis.py  scheduler.py  security.py  utils.py
backend/app/integrations/feishu/: approval.py  auth.py  bot.py  calendar.py  client.py  task.py
backend/app/middleware/: audit.py  error_handler.py  metrics.py  rate_limit.py  request_id.py  security_headers.py
backend/app/models/: __init__.py  certification.py  design.py  firmware.py  product.py  project.py  supplier.py  user.py
backend/app/repositories/: __init__.py  base.py  certification_repo.py  design_repo.py  firmware_repo.py  product_repo.py  project_repo.py  supplier_repo.py  user_repo.py
backend/app/schemas/: __init__.py  certification.py  common.py  design.py  firmware.py  product.py  project.py  supplier.py  user.py
backend/app/services/: __init__.py  admin_service.py  analytics_service.py  auth_service.py  certification_service.py  dashboard_service.py  design_service.py  firmware_service.py  product_service.py  project_service.py  supplier_service.py
backend/tests/: conftest.py  test_analytics_service.py  test_auth.py  test_auth_service.py  test_certification_service.py  test_dashboard_service.py  test_design_service.py  test_firmware_service.py  test_integration.py  test_models.py  test_other_services.py  test_product_service.py  test_products.py  test_project_service.py  test_schemas.py  test_security.py  test_supplier_service.py
(+95 files in other folders)
